--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.5",
         "vite": "^5.4.0"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.3",
+        "sass": "^1.78.0"
     }
 }
