Buttload of changes. Do not commit like this

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "bootstrap": "^5.3.3",
         "chart.js": "^4.4.4",
         "chartjs-plugin-datalabels": "^2.2.0",
+        "puppeteer": "^23.5.0",
         "sass": "^1.78.0"
     }
 }
