--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
+        "livewire/livewire": "^3.5",
+        "spatie/laravel-livewire-wizard": "^2.3",
         "spatie/laravel-pdf": "^1.5"
     },
     "require-dev": {
