--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "barryvdh/laravel-dompdf": "^3.0",
         "codeat3/blade-google-material-design-icons": "^1.19",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
