--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "laravel/ui": "^4.5",
         "livewire/livewire": "^3.5",
         "spatie/laravel-livewire-wizard": "^2.3",
-        "spatie/laravel-pdf": "^1.5"
+        "spatie/laravel-pdf": "^1.5",
+        "yoeunes/toastr": "^2.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
